[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/ButtonsAndOptions/CheckBox.gd" type="Script" id=1]
[ext_resource path="res://Menu/ButtonsAndOptions/MenuCheckBox.gd" type="Script" id=2]
[ext_resource path="res://Menu/LabelBaseModel.tscn" type="PackedScene" id=3]

[node name="MenuCheckBox" type="HBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBaseModel" parent="." instance=ExtResource( 3 )]
margin_left = 466.0
margin_top = 4.0
margin_right = 530.0
margin_bottom = 20.0
text = "Text"

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 534.0
margin_right = 558.0
margin_bottom = 24.0
flat = true
align = 2
expand_icon = true
script = ExtResource( 1 )
switch_option_time = 0.1
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
